Fix spacing in table headers

--- a/css/shunit.css
+++ b/css/shunit.css
@@ -43,7 +43,7 @@ td.doc {
     padding: 10px 25px 10px 40px;
 }
 th.doc {
-    padding: 30px 25px 10px 40px;
+    padding: 42px 25px 10px 40px;
     font-size: 1.4em;
     color: #7CC8E2;
 }
